# krishi-verse

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  AI_AGENT_BUILD_GUIDE.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_MANIFEST.md  LICENSE  MOBILE_AI_AGENT_BUILD_GUIDE.md  Makefile  README.md  SECURITY.md  START_HERE.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml  pull_request_template.md
.zap/: rules.tsv
apps/ai-services/: .env.example  Dockerfile  README.md  pyproject.toml
apps/ai-services/feature-store/: README.md
apps/ai-services/src/: main.py
apps/ai-services/src/assistant/: guardrails.py  provider.py  router.py
apps/ai-services/src/common/: auth.py  config.py  db.py  http.py  inference_logger.py  model_registry.py  redact.py  resilience.py  telemetry.py
apps/ai-services/src/doc_extraction/: confidence.py  prompts.py  router.py
apps/ai-services/src/fraud_signals/: graph_features.py  router.py  rules.py
apps/ai-services/src/photo_grading/: model.py  preprocess.py  router.py
apps/ai-services/src/price_bands/: features.py  model.py  router.py
apps/ai-services/src/voice_extraction/: confidence.py  extractor.py  prompts.py  router.py
apps/ai-services/tests/: test_fraud_and_resilience.py  test_grading.py  test_price_bands.py  test_security.py  test_voice_extraction.py
apps/ai-services/training/photo_grading/: labelling_spec.md
apps/ai-services/training/price_bands/: backtest.py
apps/ai-services/training/voice_extraction/: dataset_builder.py
db/: README.md
docs/: REVIEW_GROUNDING.md
infra/: DEPLOY-RUNBOOK.md  EDGE-RUNBOOK.md  OBSERVABILITY-RUNBOOK.md  README.md  SECRETS-RUNBOOK.md
ops/: capacity-plan.md  slo.md  (+1 more)
(+4380 files in other folders)
