[project]
name = "krishi-verse-ai-services"
version = "0.1.0"
description = "AI inference services: voice→listing extraction, photo grading, price bands, fraud signals."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.27",
  "numpy>=1.26",
  "python-json-logger>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The code is run as `src.main:app` (see Dockerfile/README), so the importable package IS the `src/`
# directory. Hatchling can't auto-detect that from the project name, so we point it at `src` explicitly.
# This makes both `pip install -e .` (local dev) and `pip install .` (Docker) work.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
